Add CodeEditor for live Zephyr preview

--- a/src/content/blog/connecting-antlr-to-codemirror-6-an-introduction/connecting-antlr-to-codemirror-6-an-introduction.mdx
+++ b/src/content/blog/connecting-antlr-to-codemirror-6-an-introduction/connecting-antlr-to-codemirror-6-an-introduction.mdx
@@ -171,9 +171,9 @@ So Zephyr it is!
 
 I wrote this language in an ANTLR grammar as a language heavily inspired by Javascript. It features only a couple of features: variable assignments and comments. You can play with it in the code editor below:
 
-```
+import {CodeEditor} from './CodeEditor';
+
 <CodeEditor />
-```
 
 This code editor features an ANTLR language parser connected via a custom adapter to CodeMirror. While far from perfect, it is a working example of getting ANTLR and CodeMirror to talk!
 
