Added basic version of CodeEditorWithTokens

--- a/src/content/blog/drafts/connecting-antlr-to-codemirror-6-building-a-language-server/connecting-antlr-to-codemirror-6-building-a-language-server.mdx
+++ b/src/content/blog/drafts/connecting-antlr-to-codemirror-6-building-a-language-server/connecting-antlr-to-codemirror-6-building-a-language-server.mdx
@@ -410,3 +410,9 @@ I'm doing a _little_ bit of work to transform the tokens into something a bit mo
   {index: 5, range: [28, 27], type: 'unknown'},
 ];
 ```
+
+Want to take this for a spin? Type in the code editor and watch the output change!
+
+import {CodeEditorWithTokens} from './CodeEditorWithTokens';
+
+<CodeEditorWithTokens initialValue={`\nconst tokens = 'are great!';\n`} />
