--- a/src/content/blog/drafts/connecting-antlr-to-codemirror-6-getting-antlr-and-codemirror-talking/connecting-antlr-to-codemirror-6-getting-antlr-and-codemirror-talking.mdx
+++ b/src/content/blog/drafts/connecting-antlr-to-codemirror-6-getting-antlr-and-codemirror-talking/connecting-antlr-to-codemirror-6-getting-antlr-and-codemirror-talking.mdx
@@ -30,7 +30,7 @@ The docs state:
 
 > Different node types with the same name within a node set should play the same semantic role.
 
-NodeTypes are statically created and then reused throughout the tree when the tree is built. When all of the NodeTypes are created, we create a [NodeSet](https://lezer.codemirror.net/docs/ref/#common.NodeSet) to represent all of the NodeTypes. Lezer uses a NodeSet as a lookup table–when we build a tree and use NodeType ids to describe the nodes, Lezer looks up the id in the NodeSet.
+NodeTypes are statically created and then reused throughout the tree when the tree is built. When all of the NodeTypes are created, we create a [NodeSet](https://lezer.codemirror.net/docs/ref/#common.NodeSet) to represent all of the NodeTypes. Lezer uses the NodeSet as a lookup table when we build a tree and use NodeType ids to describe the nodes.
 
 Before we can construct a tree, we need to create a mapping between our language server's token types and Lezer NodeTypes. I have found it’s easiest to simply use the same names between the token types and the NodeTypes. Let’s go ahead and set up that mapping. We have defined these token types previously:
 
@@ -73,7 +73,7 @@ export const tokenToNodeType: {[key in Token | 'topNode']: NodeType} = {
 
 This mapping defines a NodeType for each of the token types, with each one possessing a unique id. These ids can be any number, they don't necessarily need to start at 0.
 
-You may notice that there is one extra type we have added called `topNode`. This node type is a special type what we use to tell Lezer that this node defines the top of the parse tree. It doesn’t hold any semantic meaning but is the node we connect everything to, in order to have the tree have a single entrypoint. Once we have a mapping between our tokens and NodeTypes, we can use that to build a NodeSet as well:
+You may notice that there is one extra type we have added called `topNode` with `top: true` passed to the call to NodeType. This node type is a special type what we use to tell Lezer that this node defines the top of the parse tree. It doesn’t hold any semantic meaning but is the node we connect everything to, in order to have the tree have a single entrypoint. Once we have a mapping between our tokens and NodeTypes, we can use that to build a NodeSet as well:
 
 ```typescript
 import {NodeSet} from '@lezer/common';
@@ -81,11 +81,11 @@ import {NodeSet} from '@lezer/common';
 export const parserAdapterNodeSet = new NodeSet(Object.values(tokenToNodeType));
 ```
 
-I’ve found it useful to manage the NodeTypes this way because it becomes straightforward to add a new NodeType–simply add an entry to `tokenToNodeType`. Now that we have NodeTypes in a NodeSet, we can look at building the connecting piece between the Language Server and Lezer’s Parser.
+I’ve found it useful to manage the NodeTypes this way because it becomes straightforward to add a new NodeType–simply add an entry to `tokenToNodeType`. Now that we have NodeTypes in a NodeSet, we can look at building the connecting piece between the language server and Lezer’s Parser.
 
 ## Creating a Parser Adapter
 
-Lezer has a Parser class that we can utilize to connect our language server to Lezer. The class defines several functions that Lezer will call to generate a parse tree–`createParse`, `startParse`, and `parse`. We can utilize these functions and provide our own implementation that reads the document and generates a tree based off of our own language server. Let’s first start by declaring the class:
+Lezer has a [Parser class](https://lezer.codemirror.net/docs/ref/#common.Parser) that we can utilize to connect our language server to Lezer. The class defines several functions that Lezer will call to generate a parse tree–`createParse` and `startParse`. We can utilize these functions and provide our own implementation that reads the document and generates a tree based off of our own language server. Let’s first start by declaring our adapter class and subclassing Lezer's `Parser` class:
 
 ```typescript
 import {Parser} from '@lezer/common';
@@ -102,16 +102,16 @@ export class ParserAdapter extends Parser {
 }
 ```
 
-At this point, we’ve instantiated a new language server, and created a private method that makes it easy to derive the node type from the token’s index. We’ll use this later when constructing the tree.
+At this point, we’ve instantiated a new language server and created a private method that makes it easy to derive the node type from the token’s index. We’ll use this later when constructing the tree.
 
 ## Lezer Trees & Buffers
 
-At this point, let’s look more closely at Lezer trees. Lezer’s Tree class has a static build method that we can use to build our own tree. We can provide it with either a BufferCursor or just an array of integers that correspond to the shape of the tree. When we provide it with a buffer of integers, the integers are chunked by 4, and each chunk corresponds to a node. Here’s what each position in the chunk means:
+At this point, let’s take a closer look at Lezer's parse tree. Lezer’s [Tree class](https://lezer.codemirror.net/docs/ref/#common.Tree) has a static [build method](https://lezer.codemirror.net/docs/ref/#common.Tree^build) that we can use to build our own tree. We can provide it with either a [BufferCursor](https://lezer.codemirror.net/docs/ref/#common.BufferCursor) or just [an array of integers](https://lezer.codemirror.net/docs/ref/#common.Tree^build^data.buffer) that correspond to the shape of the tree. When we provide it with a buffer of integers, Lezer reads the buffer in groups of 4 integers, where each group of four integers corresponds to a single node. Here’s what each position in the group means:
 
-1. The node type id for the node. This id must be part of the NodeSet we will (eventually) pass into the Tree’s build function.
+1. The NodeType id for the node. This id must be part of the NodeSet we will (eventually) pass into the Tree’s build function.
 2. The start offset of the node from the top of the document.
 3. The end offset of the node from the top of the document.
-4. The number of integers taken up by this node in the array. The smallest value this can be is four, which corresponds to the integers for the node type, start offset, end offset, and the size. When this node is a parent node of child nodes, this number reflects the total number of “slots” in the array that both the parent and children take up.
+4. The number of integers taken up by this node in the array. The smallest value this can be is four, which corresponds to the integers for the node type, start offset, end offset, and the size. When this node is a parent other nodes, this number reflects the total number of “slots” in the array that both the parent and children nodes take up.
 
 As a practical example, let’s say that we have two token Zephyr query:
 
@@ -140,9 +140,9 @@ const buffer = [
 ];
 ```
 
-The start and end offsets for the first two tokens correspond to the top of the document, and each has the typical size of 4. However, the top node has a start offset of 0 and an end offset of 11. Because it’s the parent of both of the previous nodes, it needs to encompass both of those nodes’ offsets. Additionally, the size of the top node is 12–4 for the first node, 4 for the second node, and 4 for itself (making 12 in total).
+The start and end offsets for the first two tokens correspond to the position of that node relative to the top of the document, and each has the typical size of 4. However, the top node has a start offset of 0 and an end offset of 11. Because it’s the parent of both of the previous nodes, it needs to encompass both of those nodes’ offsets. Additionally, the size of the top node is 12–4 for the first node, 4 for the second node, and 4 for itself (making 12 in total).
 
-In order to build a tree in our ParserAdapter class, we’ll need to create a buffer that describes the tree. We can use the tokens that come back from the language server as the basis for this buffer, since it has most of the pieces we need. Let’s add a helper method to our class to transform the token stream into a buffer that Lezer can understand:
+In order to build a tree in our `ParserAdapter` class, we’ll need to create a buffer that describes the tree. We can use the tokens that come back from the language server as the basis for this buffer, since it has most of the pieces we need. Let’s add a helper method to our class to transform the token stream into a buffer that Lezer can understand:
 
 ```typescript
 const DEFAULT_NODE_GROUP_SIZE = 4;
@@ -182,9 +182,9 @@ private createBufferFromTokens(tokens: Token[]) {
 Here’s what’s happening in this function:
 
 1. We’re iterating over each token and pushing it into the buffer.
-2. We add one to the endOffset because of the way offsets are computed between ANTLR and Lezer. ANTLR’s endOffset refers to the index of the last character of the word; Lezer expects the end offset to be fully inclusive of the word (and so the offset should refer to the character just past the word).
-3. DEFAULT_NODE_GROUP_SIZE is a named constant to make having 4 in the code a little less ✨ magic-number-y ✨.
-4. We compute the top node size based on the number of children (tokens.length \* DEFAULT_NODE_GROUP_SIZE) plus the size of the top node itself.
+2. We add one to the end offset because of the way offsets are computed between ANTLR and Lezer. ANTLR’s `stopIndex` refers to the index of the last character of the word; Lezer expects the end offset to be fully inclusive of the word (and so the offset should refer to the character just past the word).
+3. `DEFAULT_NODE_GROUP_SIZE` is a named constant to make the code a little less ✨ magic-number-y ✨.
+4. We compute the top node size based on the number of children (`tokens.length * DEFAULT_NODE_GROUP_SIZE`) plus the size of the top node itself.
 
 The docs specify that a node buffer must be in postfix order–children come before parents, and children are ordered by offsets. If you have offsets out of order, Lezer won’t generate the tree properly and will throw an error.
 
@@ -206,11 +206,11 @@ const validBuffer = [
 ];
 ```
 
-In this example the Language Server returns the tokens in the order they appear in the document, which means that we can always assume that they are in the correct order.
+The Zephyr language server returns the tokens in the order they appear in the document, which means that we can always assume that they are in the correct order.
 
 ## Building a Tree
 
-Now that we have constructed a buffer, let’s build a tree! We’ll add a helper method for generating a tree:
+Now that we have constructed a buffer, let’s build a parse tree! We’ll add a helper method for generating a tree:
 
 ```typescript
 private buildTree(document: string) {
@@ -246,13 +246,13 @@ private buildTree(document: string) {
 What’s happening in this code:
 
 1. We first get a list of tokens in the document from the language server.
-2. If the language server returns an empty list, we can build a “dummy” tree with only a single node (a top node) in it. This ensures that we still return a tree and it doesn’t throw an error.
-3. If we know we have tokens, we generate a buffer from that array of tokens.
-4. From there, we build our tree! Notice that we need to pass in the node set we construct earlier, as well as the id of the top node. If either of those are omitted or incorrect, the tree won’t build properly.
+2. If the language server returns an empty list, we can build a “dummy” tree with only a single node (a top node) in it. This ensures that we still return a tree prevents Lezer from throwing an error.
+3. If we have tokens, we generate a buffer from that token stream.
+4. From there, we build our tree! Notice that we need to pass in the node set we constructed earlier, as well as the id of the top node. If either of those are omitted or incorrect, the tree won’t build properly.
 
 ## Completing the adapter
 
-Now that we have all of our helper methods, we are ready to finish the ParserAdapter by implementing the required methods. We’ll implement both startParse and createParse:
+Now that we have all of our helper methods, we are ready to finish the our parser adapter by implementing the required methods. We need to implement both `startParse` and `createParse`–`createParse` is used for the initial creation of the tree, and `startParse` is used when the code is edited. The code for these functions looks like this:
 
 ```typescript
 // 1
@@ -288,12 +288,12 @@ startParse(
 
 Here’s what’s happening in this code:
 
-1. Instead of maining a separate implementation for createParse, I’ve opted to simply forward calls to that function to startParse.
-2. Lezer uses an Input type in addition to a simple string type; we need to do a little bit of unwrapping to get at the document.
+1. Instead of maintaining a separate implementation for `createParse`, I’ve opted to simply forward calls to that function to `startParse`.
+2. For the `input` in this parse function, Lezer uses both an [Input](https://lezer.codemirror.net/docs/ref/#common.Input) type and a simple string type–we need to do a little bit of unwrapping of this type to get at the document.
 3. We use the document to generate a tree.
-4. We return an object that conforms to the expected return shape. While Lezer supports incremental parsing, this implementation doesn’t consider incremental parsing, which is why the implementation of this return object is not very meaningful.
+4. We return an object that conforms to the expected return shape. While Lezer supports incremental parsing, this implementation doesn’t consider incremental parsing, which is why certain parts of the implementation of this return object are not very meaningful.
 
-If we put all of this together, we end up with the following ParserAdapter:
+If we put all of this together, we end up with the following `ParserAdapter`:
 
 ```ts
 import {Parser, Tree, Input, PartialParse, TreeFragment} from '@lezer/common';
@@ -388,9 +388,13 @@ export class ParserAdapter extends Parser {
 
 ## Considerations
 
-This implementation isn’t perfect, and has a couple of drawbacks:
+This implementation isn’t perfect and has a couple of drawbacks:
 
 1. It doesn’t support incremental parsing. Instead of trying to parse only part of the document, this implementation basically throws away the old tree and creates a new one on every keystroke. This might be acceptable in documents that will only ever be very small, but if the document is 10000 lines long, performance will suffer.
-2. It lacks a complete picture of the semantic structure. We are relying on the default token stream that comes out of ANTLR, and that token stream doesn’t provide us with a description of the semantic structure of the code–for example, we don’t know when a statement starts and stops. The token stream only provides us with information contained in the lexer, and doesn’t have a knowledge of what’s in the Parser. Ideally, a tree would be assembled in a way that includes this information.
+2. It lacks a complete picture of the semantic structure. We are relying on the default token stream that comes out of ANTLR, and that token stream doesn’t provide us with a description of the semantic structure of the code–for example, we don’t know when a statement starts and stops. The token stream only provides us with information contained in the lexer, and doesn’t have a knowledge of what’s in the ANTLR parser. Ideally, a tree would be assembled in a way that includes this information.
 
 While these issues are solvable, I’ve opted not to solve them as part of this example and instead have kept this example as simple as possible to demonstrate how to connect a language server to Lezer.
+
+## Up next
+
+By this point, we have a working connection between CodeMirror and ANTLR! However, we don't have a way of using the parser adapter we've created, and we are still lacking editor features like syntax highlighting. In the next (and final) article in this series, I'll walk through how to connect our parser adapter to CodeMirror and get all the language features we expect from a great code editor. If you can't wait until then, check out [the code](https://github.com/thetrevorharmon/zephyr-demo/blob/main/src/extensions/zephyr/zephyr.ts) for the Zephyr extension.
